--- a/src/main/resources/templates/thymeleaf/x-admin/index.html
+++ b/src/main/resources/templates/thymeleaf/x-admin/index.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" th:href="${#httpServletRequest.getContextPath()+'/static/x-admin/favicon.ico'}" type="image/x-icon" />
     <link rel="stylesheet" th:href="${#httpServletRequest.getContextPath()+'/static/x-admin/css/font.css'}"/>
 	<link rel="stylesheet" th:href="${#httpServletRequest.getContextPath()+'/static/x-admin/css/xadmin.css'}"/>
-    <script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+    <script th:src="${#httpServletRequest.getContextPath()+'/static/js/jquery.min.js'}" charset="utf-8"></script>
     <script th:src="${#httpServletRequest.getContextPath()+'/static/x-admin/lib/layui/layui.js'}" charset="utf-8"></script>
     <script type="text/javascript" th:src="${#httpServletRequest.getContextPath()+'/static/x-admin/js/xadmin.js'}"></script>
     
@@ -98,7 +98,7 @@
                 </a>
                 <ul class="sub-menu">
                     <li>
-                        <a _href="/message/message_list.html">
+                        <a _href="/firstcharge/firstcharge_report.html">
                             <i class="iconfont">&#xe6a7;</i>
                             <cite>会员留存</cite>
                         </a>
