--- a/src/main/resources/templates/thymeleaf/x-admin/login.html
+++ b/src/main/resources/templates/thymeleaf/x-admin/login.html
@@ -22,7 +22,7 @@
 <body class="login-bg">
     
     <div class="login layui-anim layui-anim-up">
-        <div class="message">福彩网-管理登录</div>
+        <div class="message">鑫福彩-管理登录</div>
         <div id="darkbannerwrap"></div>
         
         <form method="post" class="layui-form" >
@@ -31,9 +31,6 @@
             <input name="password" lay-verify="required" placeholder="密码" value="admin"  type="password" class="layui-input"/>
             <hr class="hr15"/>
             <input value="登录" lay-submit="xx" lay-filter="login" style="width:100%;" type="submit" />
-            <br/><br/>
-            <input value="注册" onclick="x_admin_show('添加用户','/user/user-add.html?from=register',600,400)" style="width:100%;" type="button" />
-            <hr class="hr20"/>
         </form>
     </div>
 
