--- a/src/main/resources/static/x-admin/css/xadmin.css
+++ b/src/main/resources/static/x-admin/css/xadmin.css
@@ -19,8 +19,7 @@ body{
     min-height: 100%;
 }
 .login-bg{
-    /*background: #eeeeee url() 0 0 no-repeat;*/
-     background:url(../images/bg.png) no-repeat center;
+    background: #dcdcdc url() 0 0 no-repeat;
     background-size: cover;
     overflow: hidden;
 }
