--- a/src/main/resources/templates/thymeleaf/x-admin/index.html
+++ b/src/main/resources/templates/thymeleaf/x-admin/index.html
@@ -26,7 +26,7 @@
 <body>
     <!-- 顶部开始 -->
     <div class="container">
-        <div class="logo"><a href="./index.html">福彩网</a></div>
+        <div class="logo"><a href="./index.html">鑫福彩</a></div>
         <div class="left_open">
             <i title="展开左侧栏" class="iconfont">&#xe699;</i>
         </div>
@@ -37,7 +37,7 @@
              <!--  <dd><a onclick="x_admin_show('个人信息','http://www.baidu.com')">个人信息</a></dd>
               <dd><a onclick="x_admin_show('切换帐号','http://www.baidu.com')">切换帐号</a></dd> -->
               <dd><a href="/logout.html"  th:href="${#httpServletRequest.getContextPath()+'/logout.html'}">退出</a></dd>
-              <dd th:if="${session.user.username} ne 'admin'"><a href="javascript:void(0)"  onclick="updateUser();">个人信息</a></dd>
+              <dd><a href="javascript:void(0)"  onclick="updateUser();">个人信息</a></dd>
             </dl>
           </li>
           <!-- <li class="layui-nav-item to-index"><a href="/preIndex.html">前台首页</a></li> -->
@@ -51,7 +51,7 @@
       <div id="side-nav">
         <ul id="nav">
         
-            <li th:if="${session.user.roles} eq '1'">
+            <li th:if="${session.user.username} eq 'admin'">
                 <a href="javascript:;">
                     <i class="iconfont">&#xe6b8;</i>
                     <cite>用户管理</cite>
