--- a/src/main/resources/templates/thymeleaf/x-admin/index.html
+++ b/src/main/resources/templates/thymeleaf/x-admin/index.html
@@ -103,6 +103,12 @@
                             <cite>会员留存</cite>
                         </a>
                     </li >
+                    <li>
+                        <a _href="/memberCount/totalChargeReport.html">
+                            <i class="iconfont">&#xe6a7;</i>
+                            <cite>累计充值报表</cite>
+                        </a>
+                    </li >
                 </ul>
             </li>
             
