--- a/src/main/resources/templates/thymeleaf/x-admin/index.html
+++ b/src/main/resources/templates/thymeleaf/x-admin/index.html
@@ -104,6 +104,12 @@
                         </a>
                     </li >
                     <li>
+                        <a _href="/firstcharge/firstcharge_report2.html">
+                            <i class="iconfont">&#xe6a7;</i>
+                            <cite>留存查询</cite>
+                        </a>
+                    </li >
+                    <li>
                         <a _href="/memberCount/totalChargeReport.html">
                             <i class="iconfont">&#xe6a7;</i>
                             <cite>累计充值报表</cite>
