--- a/src/main/resources/templates/thymeleaf/x-admin/firstcharge/firstcharge_report2.html
+++ b/src/main/resources/templates/thymeleaf/x-admin/firstcharge/firstcharge_report2.html
@@ -49,11 +49,13 @@
           <input type="hidden" name="pageNum"/>
           <input type="hidden" name="pageSize" value="10"/>
           <input type="text" name="user_name"  placeholder="请输入用户名" autocomplete="off" class="layui-input"/>
-          <input type="text" name="gmtCreated"  placeholder="请选择首充日期" id="test1" autocomplete="off" class="layui-input"/>
+          <input type="text" name="startTime"  placeholder="请选择首充日期" id="test1" autocomplete="off" class="layui-input"/>
+          	到
+          <input type="text" name="endTime"  placeholder="请选择首充日期" id="test2" autocomplete="off" class="layui-input"/>
           <button class="layui-btn" type="button" onclick="queryUsersFY()"><i class="layui-icon">&#xe615;</i></button>
           <button class="layui-btn layui-btn-normal" type="button" onclick='clearQueryCondition(this)' title="点击重置查询条件"><i class="layui-icon">&#xe639;</i></button>
           
-          <button class="layui-btn layui-btn-normal" type="button" onclick="exportExcel('queryUserForm', '/firstcharge/downFirstcharge_report.html')" title="点击下载"><i class="layui-icon">&#xe601;</i></button>
+          <button class="layui-btn layui-btn-normal" type="button" onclick="exportExcel('queryUserForm', '/firstcharge/downFirstcharge_report2.html')" title="点击下载"><i class="layui-icon">&#xe601;</i></button>
         </form>
       </div>
       
@@ -62,6 +64,7 @@
           <tr>
             <th>序号</th>
             <th>会员账号</th>
+            <th>首充日期</th>
             <th>当天</th>
             <th>1天</th>
             <th>2天</th>
@@ -114,6 +117,11 @@ layui.use('laydate', function(){
   //常规用法
   laydate.render({
     elem: '#test1',
+    value: new Date(new Date()-1000*60*60*24*2)
+  });
+  
+  laydate.render({
+    elem: '#test2',
     value: new Date(new Date()-1000*60*60*24*2)
   });
 });
