--- a/src/main/resources/templates/thymeleaf/x-admin/firstcharge/firstcharge_report2.html
+++ b/src/main/resources/templates/thymeleaf/x-admin/firstcharge/firstcharge_report2.html
@@ -52,9 +52,16 @@
           <input type="text" name="startTime"  placeholder="请选择首充日期" id="test1" autocomplete="off" class="layui-input"/>
           	到
           <input type="text" name="endTime"  placeholder="请选择首充日期" id="test2" autocomplete="off" class="layui-input"/>
+          
+          <div class="layui-input-inline">
+            <select name="parentName" class="layui-select" lay-search="true">
+              <option value="">全部代理</option>
+              <option th:each="parentName : ${parentNames}" th:text="${parentName}" th:value="${parentName}"></option>
+            </select>
+          </div>
+          
           <button class="layui-btn" type="button" onclick="queryUsersFY()"><i class="layui-icon">&#xe615;</i></button>
           <button class="layui-btn layui-btn-normal" type="button" onclick='clearQueryCondition(this)' title="点击重置查询条件"><i class="layui-icon">&#xe639;</i></button>
-          
           <button class="layui-btn layui-btn-normal" type="button" onclick="exportExcel('queryUserForm', '/firstcharge/downFirstcharge_report2.html')" title="点击下载"><i class="layui-icon">&#xe601;</i></button>
         </form>
       </div>
@@ -124,5 +131,10 @@ layui.use('laydate', function(){
     elem: '#test2',
     value: new Date(new Date()-1000*60*60*24*2)
   });
+});
+
+layui.use('form', function(){
+	  var form = layui.form; 
+	  form.render();
 });
 </script>
