--- a/src/main/resources/templates/thymeleaf/x-admin/firstcharge/firstcharge_report2.html
+++ b/src/main/resources/templates/thymeleaf/x-admin/firstcharge/firstcharge_report2.html
@@ -71,6 +71,8 @@
           <tr>
             <th>序号</th>
             <th>会员账号</th>
+            <th>子账号</th>
+            <th>上级</th>
             <th>首充日期</th>
             <th>当天</th>
             <th>1天</th>
