--- a/src/main/resources/templates/thymeleaf/x-admin/index.html
+++ b/src/main/resources/templates/thymeleaf/x-admin/index.html
@@ -106,7 +106,7 @@
                     <li>
                         <a _href="/firstcharge/firstcharge_report2.html">
                             <i class="iconfont">&#xe6a7;</i>
-                            <cite>留存查询</cite>
+                            <cite>会员留存(plus)</cite>
                         </a>
                     </li >
                     <li>
