--- a/src/main/resources/templates/thymeleaf/x-admin/user/updateUser.html
+++ b/src/main/resources/templates/thymeleaf/x-admin/user/updateUser.html
@@ -64,6 +64,20 @@
                   autocomplete="off" class="layui-input"/>
               </div>
           </div>
+          
+          <div class="layui-form-item" th:if="${from} == 'admin'">
+              <label for="L_username" class="layui-form-label">
+                  	角色
+              </label>
+             <div class="layui-input-block">
+		      <input type="radio" name="roles" value="系统管理员" title="系统管理员" 
+		      	th:checked="${user.roles eq '系统管理员'}"/>
+		      	
+		      <input type="radio" name="roles" value="普通用户" title="普通用户"
+		      	th:checked="${user.roles eq '普通用户'}"/>
+		     </div>
+          </div>
+          
           <div class="layui-form-item" th:if="${from} == 'admin'">
               <label for="L_username" class="layui-form-label">
                   	权限
