--- a/src/main/resources/templates/thymeleaf/x-admin/user/user-add.html
+++ b/src/main/resources/templates/thymeleaf/x-admin/user/user-add.html
@@ -57,6 +57,19 @@
                   6到16个字符
               </div>
           </div>
+          
+          <div class="layui-form-item">
+              <label for="L_username" class="layui-form-label">
+                  	角色
+              </label>
+             <div class="layui-input-block">
+		      <input type="radio" name="roles" value="系统管理员" title="系统管理员" 
+		 		/>
+		      	
+		      <input type="radio" name="roles" value="普通用户" title="普通用户"
+		      	checked="false"/>
+		     </div>
+          </div>
           <div class="layui-form-item">
               <label for="L_repass" class="layui-form-label">
               </label>
