--- a/src/main/resources/templates/thymeleaf/x-admin/firstcharge/firstcharge_report2.html
+++ b/src/main/resources/templates/thymeleaf/x-admin/firstcharge/firstcharge_report2.html
@@ -72,6 +72,7 @@
             <th>序号</th>
             <th>会员账号</th>
             <th>子账号</th>
+            <th>子账号描述</th>
             <th>上级</th>
             <th>首充日期</th>
             <th>当天</th>
