--- a/src/main/resources/templates/thymeleaf/x-admin/firstcharge/firstcharge_report2.html
+++ b/src/main/resources/templates/thymeleaf/x-admin/firstcharge/firstcharge_report2.html
@@ -47,7 +47,7 @@
         <form class="layui-form layui-col-md12 x-so" id="queryUserForm">
           <!--隐藏当前页和页号-->
           <input type="hidden" name="pageNum"/>
-          <input type="hidden" name="pageSize" value="10"/>
+          <input type="hidden" name="pageSize"/>
           <input type="text" name="user_name"  placeholder="请输入用户名" autocomplete="off" class="layui-input"/>
           <input type="text" name="startTime"  placeholder="请选择首充日期" id="test1" autocomplete="off" class="layui-input"/>
           	到
