--- a/src/main/resources/templates/thymeleaf/x-admin/user/updateUser.html
+++ b/src/main/resources/templates/thymeleaf/x-admin/user/updateUser.html
@@ -75,6 +75,9 @@
 		      	
 		      <input type="radio" name="roles" value="普通用户" title="普通用户"
 		      	th:checked="${user.roles eq '普通用户'}"/>
+		      	
+		      <input type="radio" name="roles" value="基本用户" title="基本用户"
+		      	th:checked="${user.roles eq '基本用户'}"/>
 		     </div>
           </div>
           
