--- a/src/main/resources/templates/thymeleaf/x-admin/memberCount/totalChargeReport.html
+++ b/src/main/resources/templates/thymeleaf/x-admin/memberCount/totalChargeReport.html
@@ -43,7 +43,7 @@
           <input type="hidden" name="pageNum"/>
           <input type="hidden" name="pageSize"/>
           <input type="text" name="user_name"  placeholder="请输入用户名" autocomplete="off" class="layui-input"/>
-          <input type="text" name="gmt_created"  placeholder="请选择首充日期" id = "test3" autocomplete="off" class="layui-input dateInput"/>
+          <input type="text" name="gmt_created"  placeholder="请选择最后登录日期" id = "test3" autocomplete="off" class="layui-input dateInput"/>
           
           <b>充值日期：</b>
           <input type="text" name="startTime"  placeholder="请选择开始日期" id = "test1" autocomplete="off" class="layui-input dateInput"/>
@@ -72,7 +72,7 @@
             <th>子账号描述</th>
             <th>上级</th>
             <th>注册日期</th>
-            <th>首充日期</th>
+            <th>最后登录日期</th>
             <th>充值金额</th>
           </tr>
         </thead>
