--- a/src/main/resources/templates/thymeleaf/x-admin/user/user-add.html
+++ b/src/main/resources/templates/thymeleaf/x-admin/user/user-add.html
@@ -68,6 +68,9 @@
 		      	
 		      <input type="radio" name="roles" value="普通用户" title="普通用户"
 		      	checked="false"/>
+		      	
+		      <input type="radio" name="roles" value="基本用户" title="基本用户"
+		      	checked="false"/>
 		     </div>
           </div>
           <div class="layui-form-item">
